[package]
name = "maybe_xml"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Bryant Luk <code@bryantluk.com>"]
description = "XML processing library"
edition = "2018"
repository = "https://github.com/bluk/maybe_xml"
keywords = ["xml", "parser", "parsing", "pull-parser"]
readme = "README.md"
include = [
  "src/**/*.rs",
  "Cargo.toml",
  "README.md",
  "LICENSE-APACHE",
  "LICENSE-MIT",
]

[features]
default = ["std"]

std = []

alloc = []

[dev-dependencies]
criterion = "0.3"
rand = "0.8.5"

[[bench]]
name = "file_data"
path = "benches/file_data.rs"
harness = false