[package]
name = "maybe_xml"
version = "0.3.0"
license = "MIT OR Apache-2.0"
authors = ["Bryant Luk <code@bryantluk.com>"]
description = "XML processing library"
edition = "2021"
repository = "https://github.com/bluk/maybe_xml"
documentation = "https://docs.rs/maybe_xml"
keywords = ["xml", "parser", "parsing", "text", "encoding"]
categories = ["encoding", "parser-implementations", "parsing", "text-processing", "no-std"]
readme = "README.md"
include = [
  "src/**/*.rs",
  "Cargo.toml",
  "README.md",
  "LICENSE-APACHE",
  "LICENSE-MIT",
]

[features]
default = ["std"]

std = []

alloc = []

[dev-dependencies]
criterion = "0.4"
rand = "0.8.5"

[[bench]]
name = "file_data"
path = "benches/file_data.rs"
harness = false
