[package]
authors = ["Bryant Luk <code@bryantluk.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "benchmark"
publish = false
readme = "README.md"
repository = "https://github.com/bluk/maybe_xml"
version = "0.5.0"

[dependencies]
maybe_xml = { path = "../maybe_xml", features = ["std"] }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "file_data"
path = "benches/file_data.rs"
harness = false
