[package]
authors = ["Bryant Luk <code@bryantluk.com>"]
categories = ["encoding", "parser-implementations", "parsing", "text-processing", "no-std"]
description = "XML processing library"
documentation = "https://docs.rs/maybe_xml"
edition = "2021"
include = [
  "src/**/*.rs",
  "Cargo.toml",
  "CHANGELOG.md",
  "README.md",
  "LICENSE-APACHE",
  "LICENSE-MIT",
]
keywords = ["xml", "parser", "parsing", "text", "encoding"]
license = "MIT OR Apache-2.0"
name = "maybe_xml"
readme = "README.md"
repository = "https://github.com/bluk/maybe_xml"
rust-version = "1.71.0"
version = "0.9.0"

[features]
default = ["std"]

std = []

alloc = []