[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "tokencount"
publish = false
version = "0.0.0"

[features]
default = ["internal_unstable"]

# Exposing internal and unstable APIs
internal_unstable = ["maybe_xml/internal_unstable"]

[dependencies]
maybe_xml = { path = "../../maybe_xml" }
